# Game

./: .env  .firebaserc  .gitignore  .xcodecloud.yml  .xcodecloud.yml   GoogleService-Info.plist  README.md  app.config.js  app.json  database.rules.json  eas.json  firebase.json  package-lock.json  package.json
.firebase/: hosting.cHVibGlj.cache
ai-rust/: Cargo.toml
ai-rust/src/: lib.rs
app/: _layout.tsx  index.tsx  local-play.tsx  profile.tsx  rules.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
app/auth/: login.tsx  register.tsx
app/online/: create.tsx  index.tsx
app/online/game/: [id].tsx
components/: hello-wave.tsx  parallax-scroll-view.tsx  themed-text.tsx
components/quoridor/: MultiplayerQuoridorGame.tsx  QuoridorAI.ts  QuoridorBoard.tsx  QuoridorGame.tsx  WallPalette.tsx  game-logic.ts
components/ui/: CustomAlert.tsx  collapsible.tsx  icon-symbol.tsx
constants/: theme.ts
context/: AuthContext.tsx  GameLobbyContext.tsx
functions/: aiWasm.ts
hooks/: use-custom-alert.ts  use-items.ts  use-realtime-game.ts  use-theme-color.ts  use-user-stats.ts
ios/: Podfile
ios/PathBlockerOnline/: Info.plist
ios/PathBlockerOnline.xcodeproj/: project.pbxproj
ios/PathBlockerOnline.xcodeproj/xcshareddata/xcschemes/: PathBlockerOnline.xcscheme
ios/PathBlockerOnline.xcworkspace/: contents.xcworkspacedata
plugins/: with-admob-id.js  withReactNativeV8Native.js
public/: app-ads.txt
services/: firebase.ts
types/: react-native-quickjs.d.ts  wasm.d.ts
utils/: sounds.ts
